0.6.2 - "Meow"

  * Added command to replay specified amount of quicklog
  * Added command FLUSHQLOG to flush specified time from quicklog
  * Added configuration option to (not to) replay quicklog on attach
  * Removed obsolete bits from README


0.6.1 - "All the trouble and twice the bugs"

  * Fixed snprintf size with forwardmsg in server.c
  * Fool-proofed reading inbox
  * Fixed jumping to certain server right after rehash
  * Fixed handling of failing to open logfiles
  * Fixed client-PING reply
  * Fixed quicklog with timestamps in the beginning and qlogflush set to false
  * Fixed not replaying quicklog if not on any channel
  * Fixed issue with channel flag 'O'
  * Parted channels are no longer joined at attach if they have no qlog
    and flushqlog is set to FALSE.
  * miau again accepts commands when connection to the server is lost
  * Reply to PART and JOIN when not connected to the server
  * Allow CTCP-reply right after start-up to keep some services happy
  * Call setvbuf only if statelog is enabled
  * stdout is no longer redirected in a file we cannot write to
  * miau no longer creates LOGDIR if logging isn't compiled in or used
  * Fixed buffer size in irc.c:irc_notice
  * Free forwardmsg in miauc.c:escape
  * Free memory if bind() fails (which causes miau to quit)
  * Fixed one-byte memory leak with logsuffix
  * Warn about failing to open a logfile. Not too often, though.
  * Added an option to define time between forwardmsg commits
  * Fixed rpl_malloc/rpl_realloc handling
  * Changed hstrerror-handling
  * Fixed getopt
  * Optimized using va_lists in irc.c
  * Realloc-optimization in channels.c, automode.c
  * Changed logpostfix into logsuffix
  * Code cleanup (yes, it was a horrible mess and it's still a horrible mess)


0.6.0.2

  * Hopefully fix problems configure switches for once and for all.
  * Fix quicklog timestamping.
  * Change quicklog to use list.[ch] instead of obsolete llist.[ch]


0.6.0.1
