@@ -1,5 +1,6 @@
 0.6.2 - "Meow"
 
+  * Fixed crash with qlog-to-inbox feature if inbox failed to open
   * Added command to replay specified amount of quicklog
   * Added command FLUSHQLOG to flush specified time from quicklog
   * Added configuration option to (not to) replay quicklog on attach
